when focusout from notetext, it will be saved

--- a/public/notes.html
+++ b/public/notes.html
@@ -40,3 +40,8 @@
 </body>
 
 </html>
+<script type="text/javascript">
+  $(".note-textarea").focusout(function(event){
+    alert("saved");
+  })
+</script>
